examples/test/testpolicy19071.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19071
  namespace: namespace210
spec:
  podSelector:
    matchLabels:
      key48: value48
      key14: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value35
          key49: value31
          key1: value34
      podSelector:
        matchLabels:
          key41: value29
          key1: value35
